--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/songListFragment"
-        android:name="com.example.exercise_music_player.screens.SongListFragment"
+        android:name="com.example.exercise_music_player.screens.AlbumListFragment"
         android:label="fragment_song_list"
         tools:layout="@layout/fragment_album_list" >
         <action
@@ -19,7 +19,7 @@
     </fragment>
     <fragment
         android:id="@+id/addSongFragment"
-        android:name="com.example.exercise_music_player.screens.AddSongFragment"
+        android:name="com.example.exercise_music_player.screens.AddAlbumFragment"
         android:label="fragment_add_song"
         tools:layout="@layout/fragment_add_song" >
         <action
@@ -29,7 +29,21 @@
     </fragment>
     <fragment
         android:id="@+id/songDetailFragment"
-        android:name="com.example.exercise_music_player.screens.SongDetailFragment"
+        android:name="com.example.exercise_music_player.screens.AlbumDetailFragment"
         android:label="fragment_song_detail"
-        tools:layout="@layout/fragment_song_detail" />
+        tools:layout="@layout/fragment_album_detail" >
+        <action
+            android:id="@+id/action_songDetailFragment_to_addSongFragment2"
+            app:destination="@id/addSongFragment2" />
+    </fragment>
+    <fragment
+        android:id="@+id/addSongFragment2"
+        android:name="com.example.exercise_music_player.screens.AddSongFragment"
+        android:label="fragment_add_album"
+        tools:layout="@layout/fragment_add_album" >
+        <action
+            android:id="@+id/action_addSongFragment2_pop"
+            app:popUpTo="@id/addSongFragment2"
+            app:popUpToInclusive="true" />
+    </fragment>
 </navigation>
