--- a/app/src/main/res/layout/album_item_layout.xml
+++ b/app/src/main/res/layout/album_item_layout.xml
@@ -24,7 +24,7 @@
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/song_title_list"
+            android:id="@+id/album_title_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -46,7 +46,7 @@
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/image_song_list"
-            app:layout_constraintTop_toBottomOf="@+id/song_title_list"
+            app:layout_constraintTop_toBottomOf="@+id/album_title_list"
             app:layout_constraintVertical_bias="0.29000002" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
