--- a/app/src/main/res/layout/fragment_add_album.xml
+++ b/app/src/main/res/layout/fragment_add_album.xml
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:ems="10"
-            android:hint="Song Title"
+            android:hint="Album Title"
             android:inputType="textPersonName"
             android:textColor="#DDDDDD"
             android:textSize="24sp"
